--- a/TASVideos/Pages/Publications/View.cshtml
+++ b/TASVideos/Pages/Publications/View.cshtml
@@ -4,8 +4,8 @@
 @{
 	ViewData["Title"] = $"{Model.Publication.Title} - Movie #{Model.Id}";
     HttpRequest request = HttpContext.Request;
-	string baseUrl = $"{request.Scheme}://{request.Host}{request.PathBase}";
-	string currentUrl = $"{request.Scheme}://{request.Host}{request.PathBase}{request.Path}";
+	string baseUrl = $"https://{request.Host}{request.PathBase}";
+	string currentUrl = $"https://{request.Host}{request.PathBase}{request.Path}";
 }
 
 @section Header {
