use more generic open graph type

--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 	} else
 	{
 		{
-			<meta property="og:type" content="article" />
+			<meta property="og:type" content="website" />
 			<meta property="og:title" content="TASVideos" />
 			<meta property="og:description" content="Tool-assisted game movies - When human skills are just not enough" />
 			<meta property="og:url" content="@(currentUrl)" />
