--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -25,8 +25,8 @@
 		&& Model.Submission.Status == SubmissionStatus.Accepted;
 
 	HttpRequest request = HttpContext.Request;
-	string baseUrl = $"{request.Scheme}://{request.Host}{request.PathBase}";
-	string currentUrl = $"{request.Scheme}://{request.Host}{request.PathBase}{request.Path}";
+	string baseUrl = $"https://{request.Host}{request.PathBase}";
+	string currentUrl = $"https://{request.Host}{request.PathBase}{request.Path}";
 }
 
 @functions{
@@ -50,7 +50,7 @@
 }
 
 @section Header {
-	<meta property="og:type" content="article" />
+	<meta property="og:type" content="website" />
 	<meta property="og:title" content="TASVideos" />
 	<meta property="og:description" content="@(ViewData["Title"])" />
 	<meta property="og:url" content="@(currentUrl)" />
