re-fix showing subpages on game resources pages

--- a/TASVideos/Pages/Shared/_WikiLayoutFooter.cshtml
+++ b/TASVideos/Pages/Shared/_WikiLayoutFooter.cshtml
@@ -13,7 +13,7 @@ else if (Model.IsGameResourcesPage())
 }
 else
 {
-	@await Component.ListSubPages(Model)
+	@await Component.ListSubPages(Model, false)
 }
 
 <hr />
