--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -1,6 +1,5 @@
 @page "{id}"
 @using TASVideos.Pages.Submissions.Models
-@using Microsoft.AspNetCore.Http
 @model ViewModel
 @{
 	ViewData["Title"] = $"{Model.Submission.Title} - Submission #{Model.Id}";
@@ -23,10 +22,6 @@
 	bool canClaimAsPublisher = ViewData.UserHas(PermissionTo.PublishMovies)
 		&& ViewData.UserHas(PermissionTo.EditSubmissions)
 		&& Model.Submission.Status == SubmissionStatus.Accepted;
-
-	HttpRequest request = HttpContext.Request;
-	string baseUrl = $"https://{request.Host}{request.PathBase}";
-	string currentUrl = $"https://{request.Host}{request.PathBase}{request.Path}";
 }
 
 @functions{
@@ -53,8 +48,8 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="TASVideos" />
 	<meta property="og:description" content="@(ViewData["Title"])" />
-	<meta property="og:url" content="@(currentUrl)" />
-	<meta property="og:image" content="@($"{baseUrl}/images/logo-light-4x.png")" />
+	<meta property="og:url" content="@HttpContext.Request.ToUrl()" />
+	<meta property="og:image" content="@($"{HttpContext.Request.ToBaseUrl()}/images/logo-light-4x.png")" />
 }
 
 @section PageTitle {
