Add chat back to navbar

--- a/TASVideos/Pages/Shared/_NavBarPartial.cshtml
+++ b/TASVideos/Pages/Shared/_NavBarPartial.cshtml
@@ -10,6 +10,9 @@
 	<nav-item activate="Forum">
 		<a id="Forum" class="nav-link" asp-page="/Forum/Index">Forum</a>
 	</nav-item>
+	<nav-item activate="LiveChat">
+		<a id="LiveChat" class="nav-link" href="/LiveChat">Chat</a>
+	</nav-item>
 	<nav-dropdown id="ArticlesDropdown" activate="Articles">
 		<a id="Articles" class="dropdown-item" href="/ArticleIndex">Article Index</a>
 		<a id="GameResources" class="dropdown-item" href="/GameResources">Game Resources</a>
