Fix unstyled content flickering on page load with blocking script

--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
 		  crossorigin="anonymous"
 		  referrerpolicy="no-referrer" />
 
+	<script src="~/js/site-head.js"></script>
+
 	<link rel="alternate" href="/news.rss" type="application/rss+xml" title="TASVideos RSS News Feed">
 	<link rel="alternate" href="/submissions.rss" type="application/rss+xml" title="TASVideos RSS Submission Feed">
 	<link rel="alternate" href="/publications.rss" type="application/rss+xml" title="TASVideos RSS Publication Feed">
