Fix the background color of dark info buttons
for some reason this drives both the text info color and the bg info, change to something that has good contrast with both white and black

--- a/TASVideos/wwwroot/css/partials/_colors.scss
+++ b/TASVideos/wwwroot/css/partials/_colors.scss
@@ -39,8 +39,8 @@ $secondary-dark: #925fc8;
 $secondary-dark-rgb: 146, 95, 200;
 $info: #c2d4fc;
 $info-rgb: 194, 212, 252;
-$info-dark: #03163f;
-$info-dark-rgb: 3, 22, 63;
+$info-dark: #0aa3c2;
+$info-dark-rgb: 10, 163, 194;
 $card-primary: #acd;
 $card-primary-dark: #214354;
 $card-secondary: #cde;
