--- a/TASVideos/Pages/Forum/Topics/Index.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Index.cshtml
@@ -19,6 +19,15 @@
 		<meta property="og:url" content="@HttpContext.Request.ToUrl()" />
 		<meta property="og:image" content="@Model.HighlightedPost.PosterAvatar" />
 	}
+} else
+{
+	@section Header {
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="TASVideos Forum Thread" />
+		<meta property="og:description" content="@Model.Topic.Title" />
+		<meta property="og:url" content="@HttpContext.Request.ToUrl()" />
+		<meta property="og:image" content="@Model.Topic.Posts.FirstOrDefault()?.PosterAvatar" />
+	}
 }
 
 @section PageTitle {
