add dropdown icons to subpage listings and collapsible topicfeed

--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -157,6 +157,16 @@ article.wiki, .postbody {
 	}
 }
 
+[data-bs-toggle="collapse"] {
+	.fa::before {
+		content: "\f139";
+	}
+
+	&.collapsed .fa::before {
+		content: "\f13a";
+	}
+}
+
 .hiddenifmodule {
 	display: none;
 }
