adjust contrast of anchors to meet AA WCAG

--- a/TASVideos/wwwroot/css/partials/_colors.scss
+++ b/TASVideos/wwwroot/css/partials/_colors.scss
@@ -31,7 +31,7 @@ $tasvideos-bg-gradient-dark: #311a59;
 //custom theme colors and semantic button/border colors
 $primary: #105cb6;
 $primary-rgb: 16, 92, 182;
-$primary-dark: #4893ef;
+$primary-dark: #5099f1;
 $primary-dark-rgb: 72, 147, 239;
 $secondary: #6a37a0;
 $secondary-rgb: 106, 55, 160;
