fix news top margin on desktop

--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -348,6 +348,7 @@ article.wiki, .postbody {
 @media (min-width: 768px) {
 	.right-align-topic {
 		margin-left: 20px;
+		margin-top: 0;
 		float: right;
 		width: 33%;
 	}
