--- a/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
+++ b/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
@@ -83,9 +83,10 @@ h4 {
 		background-color: var(--bs-primary);
 		border-color: var(--bs-primary);
 
-		.btn-check:focus+&, .btn-check:active+&, .btn-check:checked+&, &.active, &:focus, &:active, &:hover, .show>&.dropdown-toggle {
+		.btn-check:focus+&, .btn-check:active+&, .btn-check:checked+&, &.active, &:focus, &:active, &:hover, &:active:focus, .show>&.dropdown-toggle {
 			background-color: var(--bs-primary-hover);
 			border-color: var(--bs-primary-hover);
+			box-shadow: 0 0 0 0.25rem RGBA(var(--bs-primary-rgb), 50%);
 		}
 	}
 
@@ -93,9 +94,10 @@ h4 {
 		background-color: var(--bs-secondary);
 		border-color: var(--bs-secondary);
 
-		.btn-check:focus+&, .btn-check:active+&, .btn-check:checked+&, &.active, &:focus, &:active, &:hover, .show>&.dropdown-toggle {
+		.btn-check:focus+&, .btn-check:active+&, .btn-check:checked+&, &.active, &:focus, &:active, &:hover, &:active:focus, .show>&.dropdown-toggle {
 			background-color: var(--bs-secondary-hover);
 			border-color: var(--bs-secondary-hover);
+			box-shadow: 0 0 0 0.25rem RGBA(var(--bs-secondary-rgb), 50%);
 		}
 	}
 }
