--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -56,7 +56,7 @@ article.wiki, .postbody {
 		th, td {
 			padding: 0.3rem;
 			vertical-align: top;
-			border: 1px solid var(--bs-gray-600);
+			border: 1px solid var(--border-color);
 		}
 
 		tbody th {
