--- a/TASVideos/Pages/Forum/Topics/Create.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Create.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = $"Creating topic for: {Model.Topic.ForumName}";
 }
 <partial Name="_ForumHeader" />
-<h4>Creating topic for: <a asp-page="/Forum/Subforum" asp-route-id="@Model.ForumId">@Model.Topic.ForumName</a></h4>
+<h4>Creating topic for: <a asp-page="/Forum/Subforum/Index" asp-route-id="@Model.ForumId">@Model.Topic.ForumName</a></h4>
 
 <form method="post">
 	<div permission="CreateForumPolls">
