better navbar contrast

--- a/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
+++ b/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
@@ -155,3 +155,7 @@ h4 {
 		border-color: var(--bs-light) var(--bs-light) var(--bs-white);
 	}
 }
+
+.navbar-dark .navbar-nav .nav-link {
+	color: RGBA(255,255,255,.6);
+}
