--- a/TASVideos/Pages/Forum/Topics/Create.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Create.cshtml
@@ -52,6 +52,10 @@
 		</column>
 	</row>
 	<fullrow class="mt-3">
+		<input asp-for="WatchTopic" />
+		<label asp-for="WatchTopic"></label>
+	</fullrow>
+	<fullrow class="mt-3">
 		<partial name="_CreatePostHelper" model="@("Topic_Post")" />
 	</fullrow>
 	<form-group>
