--- a/TASVideos/Pages/Shared/_WikiLayout.cshtml
+++ b/TASVideos/Pages/Shared/_WikiLayout.cshtml
@@ -15,6 +15,7 @@
 		}
 	}
 	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="TASVideos" />
 	<meta property="og:title" content="@pageData.PageName" />
 	<meta property="og:description" content="@description" />
 	<meta property="og:url" content="@Context.Request.ToUrl()" />
