--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -46,8 +46,9 @@
 
 @section Header {
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="TASVideos" />
-	<meta property="og:description" content="@(ViewData["Title"])" />
+	<meta property="og:site_name" content="TASVideos" />
+	<meta property="og:title" content="@($"Submission #{Model.Id}")" />
+	<meta property="og:description" content="@(Model.Submission.Title)" />
 	<meta property="og:url" content="@HttpContext.Request.ToUrl()" />
 	<meta property="og:image" content="@($"{HttpContext.Request.ToBaseUrl()}/images/logo-light-4x.png")" />
 }
